@@ -1,3 +1,6 @@
+ 20160621 (T.S.):
+ - dmpehdr.c, dmprels.c, getehdr.c, pmelf.h: added ARM machine and
+   ARM relocation type names.
  20140224 (T.S.):
  - bfd-reloc-sparc.c: first stab at implementing relocations for sparc32.
  - pmelf.h: renamed R_SPARC_12 -> R_SPARC_13 which seems to be the correct
